Estructura HTML y CSS completa para el título principal, el selector de tecnologías y los botones para ver todas las publicaciones o favoritos.

--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,75 @@ font-weight: normal;
   max-height: 100vh;
   min-height: 100vh;
 }
+.header {
+  position: relative;
+  height: 114px;
+  box-shadow: 0 1px 4px 0 rgba(0, 21, 41, 0.12);
+  background-image: linear-gradient(to bottom, #ececec -32%, #fff 124%);
+}
+.HACKER-NEWS{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  object-fit: contain;
+  font-family: Baskerville;
+  font-size: 28px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1;
+  letter-spacing: normal;
+  color: #3b3b3b;
+}
+.menu{
+  margin-top: 4rem;
+  display: flex;
+  justify-content: center;
+}
+.menu > ul > li {
+  cursor: pointer;
+  text-decoration: none;
+  display: inline;
+  margin: auto;
+}
+.btn-menu {
+  border-radius: 2px;
+  border: solid 1px #d6d6d6;
+  
+  font-size: 16px;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.75;
+  letter-spacing: normal;
+  text-align: center;
+  color: var(--brownish-grey);
+}
+.btn-menu-ALL{
+  padding: 5px 39px;
+}
+
+.btn-menu-FAVES{
+  padding: 5px 16px;
+}
+.btn-menu-ALL.btn-menu-active, .btn-menu-FAVES.btn-menu-active{
+  border-color: var(--azure);
+  color: var(--azure);
+}
+main.content{
+  display: flex;
+  max-width: 90%;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
+}
+main.faves{
+  margin-top: 133px;
+}
+main.content > ul {
+  list-style: none;
+}
 
 .select-news{
   display: block;
@@ -36,6 +105,19 @@ font-weight: normal;
   background-color: #fff;
   margin-top: 63px;
   margin-bottom: 38px;
+}
+.Text {
+  width: 11.438rem;
+  height: 1.375rem;
+  margin: 0 1.187rem 0 0;
+  font-family: Roboto;
+  font-size: 0.875rem;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.57;
+  letter-spacing: normal;
+  color: #343434;
 }
 .cards{
   display: flex;
