Se agregaron pruebas para el componente donde se visualizan las noticias y se eliminaron líneas innecesarias en el código

--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,7 @@ main.content{
   flex-direction: column;
   justify-content: center;
   margin: auto;
+  margin-bottom: 3rem;
 }
 main.faves{
   margin-top: 133px;
