Se solucionó un error cometido en el README.md, el proyecto está listo para ser subido a main

--- a/src/App.css
+++ b/src/App.css
@@ -193,7 +193,7 @@ main.content > ul {
   font-weight: 400;
   width: 2rem;
   height: 2rem;
-  margin: 0 0.5rem 0 0;
+  margin: 0 0.5rem 0.2rem 0;
   padding: 0.563rem;
   border-radius: 6px;
   border: solid 1px #d9d9d9;
